kubernetes/envs/minikube/ipApp/ipapp-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipapp 
spec:
  selector:
    matchLabels:
      app: ipapp
  template:
    metadata:
      labels:
        app: ipapp
    spec:
      containers:
        - image: nginx:1.21.3
          name: nginx
          volumeMounts:
          - name: ipapp-nginx-config
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: nginx.conf
          - name: ipapp-nginx-config
            mountPath: /www/data/index.html
            subPath: index.html 
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
      volumes:
        - name: ipapp-nginx-config
          configMap:
            name: ipapp-nginx-config
