kubernetes/envs/minikube/ipApp/ipapp-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipapp 
spec:
  type: NodePort
  selector:
    app: ipapp
  ports:
    - name: 'http'
      port: 8080
      targetPort: 8080
