kubernetes/envs/minikube/ipApp/ipapp-node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipapp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - ipapp.dev
      secretName: ipapp-tls
  rules:
    - host: ipapp.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ipapp
              port:
                number: 8080
